--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ header {
   padding-bottom: 60px;
   padding-top: 20px;
 }
-header .nav-right-corner {
+
+.nav-right-corner {
   position: fixed;
   top: 100px;
   right: -37px;
@@ -28,18 +29,21 @@ header .nav-right-corner {
   z-index: 10;
   transition: 350ms;
 }
-header .nav-right-corner .nav-lists {
+.nav-right-corner .nav-lists {
   margin: 5px 0px;
   padding: 3px 6px;
   transition: 250ms;
 }
-header .nav-right-corner .nav-lists .nav-icons {
+.nav-right-corner .nav-lists .nav-icons {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
   margin: 0;
 }
-header .nav-right-corner .nav-lists:hover {
+.nav-right-corner .nav-lists:hover {
   transform: translate(-2px, -2px);
 }
-header .nav-right-corner .nav-right-corner-btn-open {
+.nav-right-corner .nav-right-corner-btn-open {
   position: absolute;
   top: 43%;
   left: -15px;
@@ -53,12 +57,12 @@ header .nav-right-corner .nav-right-corner-btn-open {
   padding: 15px 0;
   cursor: pointer;
 }
-header .nav-right-corner .nav-right-corner-btn-open .arrow {
+.nav-right-corner .nav-right-corner-btn-open .arrow {
   color: #fff;
   font-size: 32px;
   font-family: serif;
 }
-header .nav-right-corner .nav-right-corner-btn-open:hover {
+.nav-right-corner .nav-right-corner-btn-open:hover {
   opacity: 1;
 }
 
@@ -179,6 +183,130 @@ header .nav-right-corner .nav-right-corner-btn-open:hover {
 }
 .header-nav .nav-items-cont .nav-icon-controll img {
   height: 18px;
+}
+.header-nav .nav-items-cont-mob {
+  position: fixed;
+  z-index: 11;
+  top: -70vh;
+  left: 0;
+  width: 100%;
+  background-color: #7700ff;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px 0;
+  transition: 350ms;
+}
+.header-nav .nav-items-cont-mob .logo {
+  position: absolute;
+  top: 3px;
+  left: 20px;
+  width: 35px;
+  height: 35px;
+}
+.header-nav .nav-items-cont-mob .logo .text {
+  font-size: 15px;
+  margin-left: 15px;
+  top: 7px;
+}
+.header-nav .nav-items-cont-mob .logo .text span:nth-child(1) {
+  top: 6px;
+}
+.header-nav .nav-items-cont-mob .nav-lists {
+  display: flex;
+  font-family: "Mirza", cursive, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  text-transform: capitalize;
+  color: #d7d7d7;
+  padding: 5px 10px;
+  border-radius: 8px;
+  box-shadow: -2px -2px 8px 2px rgba(254, 252, 255, 0.52);
+  background-color: rgba(137, 26, 208, 0.4117647059);
+  transform: translate(2px, 2px);
+  transition: 250ms;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
+  width: 40%;
+  min-width: 110px;
+  margin: 6px 0;
+  cursor: pointer;
+}
+.header-nav .nav-items-cont-mob .nav-lists .nav-icons {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.header-nav .nav-items-cont-mob .nav-lists:hover {
+  box-shadow: 0px 0px 7px -5px rgba(0, 0, 0, 0.631372549);
+  transform: translate(0px, 0px);
+  background-color: rgba(156, 0, 255, 0.4117647059);
+  color: white;
+}
+.header-nav .nav-items-cont-mob .nav-icon-controll img {
+  height: 18px;
+}
+.header-nav .nav-items-cont-mob-open {
+  display: none;
+  position: relative;
+  width: 25px;
+  height: 20px;
+  transition: 250ms;
+  cursor: pointer;
+}
+.header-nav .nav-items-cont-mob-open .top,
+.header-nav .nav-items-cont-mob-open .center,
+.header-nav .nav-items-cont-mob-open .bottom {
+  position: absolute;
+  transition: 350ms;
+  width: 100%;
+  height: 3px;
+  background-color: #fff;
+}
+.header-nav .nav-items-cont-mob-open .top {
+  top: 0;
+}
+.header-nav .nav-items-cont-mob-open .center {
+  top: 40%;
+}
+.header-nav .nav-items-cont-mob-open .bottom {
+  bottom: 0;
+}
+.header-nav .nav-items-cont-mob-open:hover {
+  transform: scale(1.1);
+}
+.header-nav .nav-items-cont-mob-close {
+  position: absolute;
+  right: 20px;
+  top: 25px;
+  width: 25px;
+  height: 20px;
+  transition: 250ms;
+  cursor: pointer;
+}
+.header-nav .nav-items-cont-mob-close .top,
+.header-nav .nav-items-cont-mob-close .center,
+.header-nav .nav-items-cont-mob-close .bottom {
+  position: absolute;
+  transition: 350ms;
+  width: 100%;
+  height: 3px;
+  background-color: #fff;
+}
+.header-nav .nav-items-cont-mob-close .top {
+  top: 44%;
+  transform: rotate(135deg);
+}
+.header-nav .nav-items-cont-mob-close .center {
+  display: none;
+}
+.header-nav .nav-items-cont-mob-close .bottom {
+  bottom: 44%;
+  transform: rotate(-135deg);
+}
+.header-nav .nav-items-cont-mob-close:hover {
+  transform: scale(1.1);
 }
 .header-nav .nav-icons {
   height: 25px;
@@ -328,8 +456,33 @@ header .nav-right-corner .nav-right-corner-btn-open:hover {
   }
 }
 @media screen and (max-width: 670px) {
-  .header-nav .nav-items-cont {
+  header {
+    padding-top: 5px;
+  }
+  header .header-nav {
+    width: 97%;
+    padding: 0 15px;
+  }
+  header .header-nav .logo {
+    width: 35px;
+    height: 35px;
+  }
+  header .header-nav .logo .text {
+    font-size: 15px;
+    margin-left: 15px;
+    top: 7px;
+  }
+  header .header-nav .logo .text span:nth-child(1) {
+    top: 6px;
+  }
+  header .header-nav .nav-items-cont-mob {
+    display: flex;
+  }
+  header .header-nav .nav-items-cont {
     display: none;
+  }
+  header .header-nav .nav-items-cont-mob-open {
+    display: block;
   }
 }
 @media screen and (max-width: 440px) {
@@ -337,7 +490,7 @@ header .nav-right-corner .nav-right-corner-btn-open:hover {
     right: 30px;
   }
 }
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 400px) {
   .header-nav .search .inp {
     width: 80%;
   }
