--- a/components/card-ui-hover/card-ui-hover.css
+++ b/components/card-ui-hover/card-ui-hover.css
@@ -81,7 +81,7 @@
   transform-style: preserve-3d;
   transform: translate3d(-50%, 0, 75px);
   color: rgba(0, 0, 0, 0.831372549);
-  padding: 10px 25px;
+  padding: 6px 11px;
   border-radius: 30px;
   transition: 0.5s;
   opacity: 0;
@@ -96,6 +96,11 @@
 .container .box:hover .link {
   bottom: 30px;
   opacity: 1;
+}
+@media screen and (max-width: 400px) {
+  .container .box {
+    bottom: 45px;
+  }
 }
 .container .box img {
   position: absolute;
@@ -113,4 +118,12 @@
 }
 .container .box:hover img {
   transform: translate3d(-50%, 0, 150px);
+}
+@media screen and (max-width: 400px) {
+  .container .box .name {
+    font-size: 18px;
+  }
+  .container .box img {
+    top: 35%;
+  }
 }/*# sourceMappingURL=card-ui-hover.css.map */
