--- a/components/sliders/3d-slider.css
+++ b/components/sliders/3d-slider.css
@@ -62,6 +62,8 @@
   display: block;
   float: left;
   box-sizing: border-box;
+  max-width: 400px;
+  max-height: 500px;
   margin-left: 20px;
   margin-right: 20px;
 }
