--- a/style.css
+++ b/style.css
@@ -1,9 +1,5 @@
 html {
   scroll-behavior: smooth;
-}
-
-.parent {
-  max-width: 1920px;
   font-family: "Mirza", cursive, sans-serif;
 }
 
@@ -496,5 +492,11 @@ header {
   }
   .header-nav .search {
     width: 70%;
+  }
+  .container .box {
+    width: 136px;
+  }
+  .container .box .link {
+    padding: 2px 8px;
   }
 }/*# sourceMappingURL=style.css.map */
