--- a/style.scss
+++ b/style.scss
@@ -550,7 +550,8 @@ header {
 
     .container {
         .box {
-            width: 136px;
+            margin: 20px;
+            width: 134px;
             .link{
                 padding: 2px 8px;
             }
