--- a/components/card-ui-hover/card-ui-hover.css
+++ b/components/card-ui-hover/card-ui-hover.css
@@ -27,7 +27,7 @@
 .container .box::before {
   content: "Leo";
   position: absolute;
-  top: -20px;
+  bottom: 40px;
   left: 10px;
   font-size: 5em;
   font-weight: 900;
