--- a/components/card-ui-hover/card-ui-hover.scss
+++ b/components/card-ui-hover/card-ui-hover.scss
@@ -28,7 +28,7 @@
         &::before {
             content: 'Leo';
             position: absolute;
-            top: -20px;
+            bottom: 40px;
             left: 10px;
             font-size: 5em;
             font-weight: 900;
