--- a/style.css
+++ b/style.css
@@ -364,6 +364,37 @@ header {
   cursor: pointer;
 }
 
+.search-mob {
+  position: relative;
+  display: flex;
+  padding: 5px 5px;
+  background-color: #8b0af9;
+  border-radius: 15px;
+  border: 1px solid #fff;
+  margin-right: 8px;
+  transition: 350ms;
+  width: 30px;
+  z-index: 1;
+  cursor: pointer;
+}
+.search-mob .inp {
+  background-color: #8b0af9;
+  border: none;
+  outline: none;
+  color: #fff;
+  padding-left: 5px;
+  width: 85%;
+}
+.search-mob .search-icon {
+  position: absolute;
+  width: 20px;
+  right: 3px;
+  top: 0;
+}
+.search-mob:hover .search-icon {
+  transform: scale(1.1);
+}
+
 .all-sections {
   width: 100%;
   min-height: 100vh;
@@ -459,6 +490,11 @@ header {
     width: 97%;
     padding: 0 15px;
   }
+  header .header-nav .header-nav-inner {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
   header .header-nav .logo {
     width: 35px;
     height: 35px;
@@ -483,7 +519,7 @@ header {
 }
 @media screen and (max-width: 440px) {
   .header-nav .search {
-    right: 30px;
+    display: none;
   }
 }
 @media screen and (max-width: 400px) {
