--- a/style.scss
+++ b/style.scss
@@ -396,7 +396,7 @@ header {
 
 .search-mob {
     position: relative;
-    display: flex;
+    display: none;
     padding: 5px 5px;
     background-color: #8b0af9;
     border-radius: 15px;
@@ -575,6 +575,10 @@ header {
 @media screen and (max-width: 440px) {
     .header-nav .search {
         display: none;
+    }
+
+    .search-mob {
+        display: flex;
     }
 }
 
