--- a/All-media.css
+++ b/All-media.css
@@ -62,6 +62,19 @@
     width: 170px;
     height: 325px;
   }
+  .header-nav .logo .text {
+    position: relative;
+    font-size: 27px;
+  }
+  .header-nav .logo .text p {
+    position: absolute;
+    left: 4%;
+    top: 6px;
+    color: white;
+  }
+  .header-nav .logo .text p:nth-child(2) {
+    top: 15px;
+  }
 }
 @media screen and (max-width: 440px) {
   .header-nav .search {
