--- a/All-media.scss
+++ b/All-media.scss
@@ -71,10 +71,31 @@
         }
     }
 }
+
 @media screen and (max-width: 670px) {
-    .box{
+    .box {
         width: 170px;
         height: 325px;
+    }
+
+    .header-nav {
+        .logo {
+            .text {
+                position: relative;
+                font-size: 27px;
+
+                p {
+                    position: absolute;
+                    left: 4%;
+                    top: 6px;
+                    color: white;
+                }
+
+                p:nth-child(2) {
+                    top: 15px;
+                }
+            }
+        }
     }
 }
 
