--- a/style.css
+++ b/style.css
@@ -84,18 +84,15 @@ header {
 }
 .header-nav .logo .text {
   position: relative;
-  color: white;
-  font-size: 25px;
-  margin-left: 29px;
-  display: flex;
-  flex-direction: column;
-  text-transform: capitalize;
-  top: 3px;
+  font-size: 27px;
 }
-.header-nav .logo .text span {
+.header-nav .logo .text p {
   position: absolute;
+  left: 45%;
+  top: 2px;
+  color: white;
 }
-.header-nav .logo .text span:nth-child(2) {
+.header-nav .logo .text p:nth-child(2) {
   top: 16px;
 }
 .header-nav .logo:hover {
@@ -199,14 +196,6 @@ header {
   left: 20px;
   width: 35px;
   height: 35px;
-}
-.header-nav .nav-items-cont-mob .logo .text {
-  font-size: 15px;
-  margin-left: 15px;
-  top: 7px;
-}
-.header-nav .nav-items-cont-mob .logo .text span:nth-child(1) {
-  top: 6px;
 }
 .header-nav .nav-items-cont-mob .nav-lists {
   display: flex;
