--- a/All-media.css
+++ b/All-media.css
@@ -27,12 +27,18 @@
     height: 35px;
   }
   header .header-nav .logo .text {
-    font-size: 15px;
+    position: relative;
+    font-size: 18px;
     margin-left: 15px;
-    top: 7px;
   }
-  header .header-nav .logo .text span:nth-child(1) {
-    top: 6px;
+  header .header-nav .logo .text p {
+    position: absolute;
+    left: 4%;
+    top: 11px;
+    color: white;
+  }
+  header .header-nav .logo .text p:nth-child(2) {
+    top: 20px;
   }
   header .header-nav .nav-items-cont-mob {
     display: flex;
@@ -56,24 +62,9 @@
     bottom: 40px;
     left: 5px;
   }
-}
-@media screen and (max-width: 670px) {
   .box {
     width: 170px;
     height: 325px;
-  }
-  .header-nav .logo .text {
-    position: relative;
-    font-size: 27px;
-  }
-  .header-nav .logo .text p {
-    position: absolute;
-    left: 4%;
-    top: 6px;
-    color: white;
-  }
-  .header-nav .logo .text p:nth-child(2) {
-    top: 15px;
   }
 }
 @media screen and (max-width: 440px) {
