--- a/All-media.scss
+++ b/All-media.scss
@@ -5,6 +5,9 @@
 }
 
 @media screen and (max-width: 670px) {
+    .carousel__body{
+        padding: 100px 0 70px 0;
+    }
     .carousel__prev {
         left: 20%;
     }
