--- a/style.css
+++ b/style.css
@@ -31,7 +31,6 @@ header {
   transition: 250ms;
 }
 .nav-right-corner .nav-lists .nav-icons {
-  width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
   margin: 0;
@@ -78,74 +77,46 @@ header {
 .header-nav .logo {
   position: relative;
   transition: transform 300ms;
-  width: 65px;
-  min-height: 61px;
+  height: 40px;
+  margin: 10px 5px;
   cursor: pointer;
-}
-.header-nav .logo .text {
-  position: relative;
-  font-size: 27px;
-}
-.header-nav .logo .text p {
-  position: absolute;
-  left: 45%;
-  top: 2px;
-  color: white;
-}
-.header-nav .logo .text p:nth-child(2) {
-  top: 16px;
 }
 .header-nav .logo:hover {
   transform: scale(1.2);
 }
-.header-nav .logo .beck,
-.header-nav .logo .beck2,
 .header-nav .logo .front {
+  max-height: 100%;
+}
+.header-nav .logo .beck,
+.header-nav .logo .beck2 {
   position: absolute;
-  width: 90%;
 }
 .header-nav .logo .beck {
-  left: -13%;
-  top: -7%;
-  width: 115%;
-  height: 115%;
-  -webkit-animation: rotate360 10s linear infinite;
-          animation: rotate360 10s linear infinite;
+  animation: rotate360 10s linear infinite;
 }
-@-webkit-keyframes rotate360 {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
+.header-nav .logo .beck2 {
+  animation: rotate360_2 15s linear infinite;
 }
 @keyframes rotate360 {
   0% {
-    transform: rotate(0deg);
+    transform: rotate(0deg) scale(1.5);
+  }
+  50% {
+    transform: rotate(180deg) scale(1.8);
   }
   100% {
-    transform: rotate(360deg);
+    transform: rotate(360deg) scale(1.5);
   }
 }
-.header-nav .logo .beck2 {
-  -webkit-animation: rotate3602 15s linear infinite;
-          animation: rotate3602 15s linear infinite;
-}
-@-webkit-keyframes rotate3602 {
+@keyframes rotate360_2 {
   0% {
-    transform: rotate(0deg);
+    transform: rotate(0deg) scale(1.8);
+  }
+  50% {
+    transform: rotate(180deg) scale(1.5);
   }
   100% {
-    transform: rotate(360deg);
-  }
-}
-@keyframes rotate3602 {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
+    transform: rotate(360deg) scale(1.8);
   }
 }
 .header-nav .nav-items-cont {
@@ -190,13 +161,6 @@ header {
   padding: 20px 0;
   transition: 350ms;
 }
-.header-nav .nav-items-cont-mob .logo {
-  position: absolute;
-  top: 3px;
-  left: 20px;
-  width: 35px;
-  height: 35px;
-}
 .header-nav .nav-items-cont-mob .nav-lists {
   display: flex;
   font-family: "Mirza", cursive, sans-serif;
@@ -219,12 +183,11 @@ header {
   cursor: pointer;
 }
 .header-nav .nav-items-cont-mob .nav-lists .nav-icons {
-  width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
 }
 .header-nav .nav-items-cont-mob .nav-lists:hover {
-  box-shadow: 0px 0px 7px -5px rgba(0, 0, 0, 0.631372549);
+  box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.631372549);
   transform: translate(0px, 0px);
   background-color: rgba(156, 0, 255, 0.4117647059);
   color: white;
@@ -240,24 +203,6 @@ header {
   transition: 250ms;
   cursor: pointer;
 }
-.header-nav .nav-items-cont-mob-open .top,
-.header-nav .nav-items-cont-mob-open .center,
-.header-nav .nav-items-cont-mob-open .bottom {
-  position: absolute;
-  transition: 350ms;
-  width: 100%;
-  height: 3px;
-  background-color: #fff;
-}
-.header-nav .nav-items-cont-mob-open .top {
-  top: 0;
-}
-.header-nav .nav-items-cont-mob-open .center {
-  top: 40%;
-}
-.header-nav .nav-items-cont-mob-open .bottom {
-  bottom: 0;
-}
 .header-nav .nav-items-cont-mob-open:hover {
   transform: scale(1.1);
 }
@@ -269,26 +214,6 @@ header {
   height: 20px;
   transition: 250ms;
   cursor: pointer;
-}
-.header-nav .nav-items-cont-mob-close .top,
-.header-nav .nav-items-cont-mob-close .center,
-.header-nav .nav-items-cont-mob-close .bottom {
-  position: absolute;
-  transition: 350ms;
-  width: 100%;
-  height: 3px;
-  background-color: #fff;
-}
-.header-nav .nav-items-cont-mob-close .top {
-  top: 44%;
-  transform: rotate(135deg);
-}
-.header-nav .nav-items-cont-mob-close .center {
-  display: none;
-}
-.header-nav .nav-items-cont-mob-close .bottom {
-  bottom: 44%;
-  transform: rotate(-135deg);
 }
 .header-nav .nav-items-cont-mob-close:hover {
   transform: scale(1.1);
@@ -342,7 +267,7 @@ header {
   position: absolute;
   top: 0;
   left: 18px;
-  color: #fff;
+  color: #cacaca;
   font-size: large;
 }
 .header-nav .search .search-icon {
