--- a/style.scss
+++ b/style.scss
@@ -82,67 +82,56 @@ header {
     .logo {
         position: relative;
         transition: transform 300ms;
-        width: 65px;
-        min-height: 61px;
-
+        height: 40px;
+        margin: 10px 5px;
         cursor: pointer;
-
-        .text {
-            position: relative;
-            font-size: 27px;
-
-            p {
-                position: absolute;
-                left: 45%;
-                top: 2px;
-                color: white;
-            }
-
-            p:nth-child(2) {
-                top: 16px;
-            }
-        }
 
         &:hover {
             transform: scale(1.2);
         }
 
-        .beck,
-        .beck2,
         .front {
+            max-height: 100%;
+        }
+
+        .beck,
+        .beck2 {
             position: absolute;
-            width: 90%;
         }
 
         .beck {
-            left: -13%;
-            top: -7%;
-            width: 115%;
-            height: 115%;
             animation: rotate360 10s linear infinite;
+        }
+
+        .beck2 {
+            animation: rotate360_2 15s linear infinite;
         }
 
         @keyframes rotate360 {
             0% {
-                transform: rotate(0deg)
+                transform: rotate(0deg) scale(1.5)
+            }
+
+            50% {
+                transform: rotate(180deg) scale(1.8)
             }
 
             100% {
-                transform: rotate(360deg)
+                transform: rotate(360deg) scale(1.5)
             }
         }
 
-        .beck2 {
-            animation: rotate3602 15s linear infinite;
-        }
-
-        @keyframes rotate3602 {
+        @keyframes rotate360_2 {
             0% {
-                transform: rotate(0deg)
+                transform: rotate(0deg) scale(1.8)
+            }
+
+            50% {
+                transform: rotate(180deg) scale(1.5)
             }
 
             100% {
-                transform: rotate(360deg)
+                transform: rotate(360deg) scale(1.8)
             }
         }
     }
@@ -193,14 +182,6 @@ header {
         padding: 20px 0;
         transition: 350ms;
 
-        .logo {
-            position: absolute;
-            top: 3px;
-            left: 20px;
-            width: 35px;
-            height: 35px;
-        }
-
         .nav-lists {
             display: flex;
             font-family: "Mirza", cursive, sans-serif;
@@ -227,7 +208,7 @@ header {
             }
 
             &:hover {
-                box-shadow: 0px 0px 7px -5px #000000a1;
+                box-shadow: 0px 0px 7px 0px #000000a1;
                 transform: translate(0px, 0px);
                 background-color: #9c00ff69;
                 color: white;
@@ -247,28 +228,6 @@ header {
         transition: 250ms;
         cursor: pointer;
 
-        .top,
-        .center,
-        .bottom {
-            position: absolute;
-            transition: 350ms;
-            width: 100%;
-            height: 3px;
-            background-color: #fff;
-        }
-
-        .top {
-            top: 0;
-        }
-
-        .center {
-            top: 40%;
-        }
-
-        .bottom {
-            bottom: 0;
-        }
-
         &:hover {
             transform: scale(1.1);
         }
@@ -282,30 +241,6 @@ header {
         height: 20px;
         transition: 250ms;
         cursor: pointer;
-
-        .top,
-        .center,
-        .bottom {
-            position: absolute;
-            transition: 350ms;
-            width: 100%;
-            height: 3px;
-            background-color: #fff;
-        }
-
-        .top {
-            top: 44%;
-            transform: rotate(135deg);
-        }
-
-        .center {
-            display: none;
-        }
-
-        .bottom {
-            bottom: 44%;
-            transform: rotate(-135deg);
-        }
 
         &:hover {
             transform: scale(1.1);
@@ -367,7 +302,7 @@ header {
             position: absolute;
             top: 0;
             left: 18px;
-            color: #fff;
+            color: #cacaca;
             font-size: large;
         }
 
