--- a/components/sliders/3d-slider.scss
+++ b/components/sliders/3d-slider.scss
@@ -19,20 +19,22 @@
     padding: 5px;
     border-radius: 5px;
     background-color: #8100ff;
-    width: 40px;
-    height: 40px;
-    box-shadow: 0px 0px 10px 3px #ffffff99;
-    transition: 250ms;
+    width: 35px;
+    height: 35px;
+    transition: 350ms;
     cursor: pointer;
 
     &:hover {
-        box-shadow: 0 0 0 0 #ffffff99;
+        transform: scale(1.1);
     }
 }
 
 .carousel__prev {
     transform: rotate(180deg);
     left: 40%;
+    &:hover {
+        transform: rotate(180deg) scale(1.1);
+    }
 }
 
 .carousel__next {
