--- a/style.css
+++ b/style.css
@@ -34,9 +34,14 @@ header {
   width: -moz-fit-content;
   width: fit-content;
   margin: 0;
+  padding-bottom: 5px;
+  border-radius: 3px;
 }
 .nav-right-corner .nav-lists:hover {
   transform: translate(-2px, -2px);
+}
+.nav-right-corner .nav-lists:hover .nav-icons {
+  border-bottom: 1px solid white;
 }
 .nav-right-corner .nav-right-corner-btn-open {
   position: absolute;
