--- a/style.scss
+++ b/style.scss
@@ -33,10 +33,16 @@ header {
         .nav-icons {
             width: fit-content;
             margin: 0;
+            padding-bottom: 5px;
+            border-radius: 3px;
         }
 
         &:hover {
             transform: translate(-2px, -2px);
+        }
+
+        &:hover .nav-icons {
+            border-bottom: 1px solid white;
         }
     }
 
