--- a/style.css
+++ b/style.css
@@ -334,6 +334,8 @@ header {
   z-index: 5;
 }
 .all-sections .all-sections-inner {
+  position: relative;
+  z-index: 1;
   width: 80%;
   margin: 0 auto;
 }
